policies/cis-gke-v1.5.0/proc_mount_type.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPProcMount
metadata: # kpt-merge: /cis-gke-v1.5.0-proc-mount-type
  name: cis-gke-v1.5.0-proc-mount-type
  labels:
    policycontroller.gke.io/bundleName: cis-gke-v1.5.0
  annotations:
    policycontroller.gke.io/bundleVersion: "202405.0"
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'cis-gke-v1.5.0',
        bundleDisplayName: 'CIS GKE Benchmark v1.5.0',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-cis-gke-v1.5',
        bundleVersion: '202405.0',
        bundleDescription: 'Use the CIS GKE Benchmark 1.5.0 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against the CIS GKE Benchmark v1.5.0, which is a set of recommendations for configuring GKE to support a robust security posture.',
        controlNumbers: '[4.2.1]',
        severity: 'UNSPECIFIED',
        description: 'The default `/proc` masks are set up to reduce attack surface, and should be required. See "Pod Security Standards" for more information: https://kubernetes.io/docs/concepts/security/pod-security-standards/#baseline',
        remediation: 'Containers cannot run with a `procMount` set to a value other than `Default`. Remove `procMount` from your containers or set to `Default`.',
        minimumTemplateLibraryVersion: '1.10.2',
        constraintHash: '0f2eb71e04fe7cf09cc5fdf0768940d7156cfbd29d381864c52610ba098b0584'
      }"
    internal.kpt.dev/upstream-identifier: 'constraints.gatekeeper.sh|K8sPSPProcMount|default|cis-gke-v1.5.0-proc-mount-type'
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
  parameters:
    procMount: Default
