policies/cis-gke-v1.5.0/require-binauthz.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireBinAuthZ
metadata: # kpt-merge: /cis-gke-v1.5.0-require-binauthz
  name: cis-gke-v1.5.0-require-binauthz
  labels:
    policycontroller.gke.io/bundleName: cis-gke-v1.5.0
  annotations:
    policycontroller.gke.io/bundleVersion: "202405.0"
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'cis-gke-v1.5.0',
        bundleDisplayName: 'CIS GKE Benchmark v1.5.0',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-cis-gke-v1.5',
        bundleVersion: '202405.0',
        bundleDescription: 'Use the CIS GKE Benchmark 1.5.0 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against the CIS GKE Benchmark v1.5.0, which is a set of recommendations for configuring GKE to support a robust security posture.',
        controlNumbers: '[4.5.1,5.10.4]',
        severity: 'UNSPECIFIED',
        description: 'Requires the Binary Authorization Validating Admission Webhook.',
        remediation: 'Containers must use Binary Authorization for container image authenticity and attestation. See "Set up Binary Authorization" for more information: https://cloud.google.com/binary-authorization/docs/set-up-platform',
        minimumTemplateLibraryVersion: '1.15.2',
        constraintHash: '610a1f46831b68bbdda728e08a830e33f0741fff310a3fd4561be0d123e9d867'
      }"
    internal.kpt.dev/upstream-identifier: 'constraints.gatekeeper.sh|K8sRequireBinAuthZ|default|cis-gke-v1.5.0-require-binauthz'
spec:
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Namespace
  enforcementAction: deny
