policies/cis-gke-v1.5.0/require-gke-metadata-server-enabled.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata: # kpt-merge: /cis-gke-v1.5.0-require-gke-metadata-server-enabled
  name: cis-gke-v1.5.0-require-gke-metadata-server-enabled
  labels:
    policycontroller.gke.io/bundleName: cis-gke-v1.5.0
  annotations:
    policycontroller.gke.io/bundleVersion: "202405.0"
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'cis-gke-v1.5.0',
        bundleDisplayName: 'CIS GKE Benchmark v1.5.0',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-cis-gke-v1.5',
        bundleVersion: '202405.0',
        bundleDescription: 'Use the CIS GKE Benchmark 1.5.0 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against the CIS GKE Benchmark v1.5.0, which is a set of recommendations for configuring GKE to support a robust security posture.',
        controlNumbers: '[5.4.2]',
        severity: 'UNSPECIFIED',
        description: 'Requires the GKE Metadata Service is enabled on each node in the cluster.',
        remediation: 'Ensure the GKE Metadata Server, which requires that Workload Identity is enabled, is enabled for each Node pool within the cluster. See "Workload Identity" for more information: https://cloud.google.com/kubernetes-engine/docs/how-to/workload-identity',
        minimumTemplateLibraryVersion: '1.11.1',
        constraintHash: '7d8d691db87d1872379219b76ad38e282081aebd60944a6f9f66b1a2977dccff'
      }"
    internal.kpt.dev/upstream-identifier: 'constraints.gatekeeper.sh|K8sRequiredLabels|default|cis-gke-v1.5.0-require-gke-metadata-server-enabled'
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Node
  parameters:
    message: All nodes must have the GKE Metadata Server enabled as indicated by the `iam.gke.io/gke-metadata-server-enabled=true` label.
    labels:
      - key: iam.gke.io/gke-metadata-server-enabled
        allowedRegex: ^true$
