policies/cis-gke-v1.5.0/require-namespace-networkpolicy.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireNamespaceNetworkPolicies
metadata: # kpt-merge: /cis-gke-v1.5.0-require-namespace-networkpolicy
  name: cis-gke-v1.5.0-require-namespace-networkpolicy
  labels:
    policycontroller.gke.io/bundleName: cis-gke-v1.5.0
  annotations:
    policycontroller.gke.io/bundleVersion: "202405.0"
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'cis-gke-v1.5.0',
        bundleDisplayName: 'CIS GKE Benchmark v1.5.0',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-cis-gke-v1.5',
        bundleVersion: '202405.0',
        bundleDescription: 'Use the CIS GKE Benchmark 1.5.0 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against the CIS GKE Benchmark v1.5.0, which is a set of recommendations for configuring GKE to support a robust security posture.',
        controlNumbers: '[4.3.2]',
        severity: 'UNSPECIFIED',
        description: 'Requires that every namespace defined in the cluster has a NetworkPolicy.',
        remediation: 'Cannot have a namespace in the cluster without a NetworkPolicy. Add a NetworkPolicy to your namespace. See "Network Policies" for more information: https://kubernetes.io/docs/concepts/services-networking/network-policies',
        minimumTemplateLibraryVersion: '1.10.1',
        constraintHash: '00c87f4b3e9fa7767959d337b4352d41c3691c501af2a94abf43c3b3eb505652'
      }"
    internal.kpt.dev/upstream-identifier: 'constraints.gatekeeper.sh|K8sRequireNamespaceNetworkPolicies|default|cis-gke-v1.5.0-require-namespace-networkpolicy'
spec:
  enforcementAction: deny
  match:
    excludedNamespaces:
      - kube-system
      - kube-node-lease
      - kube-public
      - gatekeeper-system
      - config-management-system
      - config-management-monitoring
      - resource-group-system
      - gke-connect
      - istio-system
      - asm-system
      - capi-system
      - vm-system
      - gke-managed-metrics-server
      - cert-manager
      - anthos-creds
      - capi-kubeadm-bootstrap-system
      - gke-system
      - anthos-identity-service
      - gmp-system
      - gmp-public
      - gke-gmp-system
      - gke-managed-filestorecsi
      - apigee
      - apigee-system
      - gke-managed-system
      - gke-managed-cim
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Namespace
