policies/cis-gke-v1.5.0/restrict-automountserviceaccounttoken.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictAutomountServiceAccountTokens
metadata: # kpt-merge: /cis-gke-v1.5.0-restrict-automountserviceaccounttoken
  name: cis-gke-v1.5.0-restrict-automountserviceaccounttoken
  labels:
    policycontroller.gke.io/bundleName: cis-gke-v1.5.0
  annotations:
    policycontroller.gke.io/bundleVersion: "202405.0"
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'cis-gke-v1.5.0',
        bundleDisplayName: 'CIS GKE Benchmark v1.5.0',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-cis-gke-v1.5',
        bundleVersion: '202405.0',
        bundleDescription: 'Use the CIS GKE Benchmark 1.5.0 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against the CIS GKE Benchmark v1.5.0, which is a set of recommendations for configuring GKE to support a robust security posture.',
        controlNumbers: '[4.1.5,4.1.6]',
        severity: 'UNSPECIFIED',
        description: 'Restricts the use of service accounts tokens.',
        remediation: 'The use of service account tokens for pods is restricted. Remove `automountServiceAccountToken: true` from `Pod` and `ServiceAccount`.  See "Configure Service Accounts for Pods" for more information: https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/',
        minimumTemplateLibraryVersion: '1.15.2',
        constraintHash: '0c15dd39a55d65c92917f3d50f19d0db930e053f4ad66ed50959b7a85da4231b'
      }"
    internal.kpt.dev/upstream-identifier: 'constraints.gatekeeper.sh|K8sRestrictAutomountServiceAccountTokens|default|cis-gke-v1.5.0-restrict-automountserviceaccounttoken'
spec:
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
          - ServiceAccount
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - gmp-system
      - cert-manager
      - gke-gmp-system
      - apigee
  enforcementAction: deny
