policies/cis-gke-v1.5.0/restrict-env-var-secrets.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoEnvVarSecrets
metadata: # kpt-merge: /cis-gke-v1.5.0-restrict-env-var-secrets
  name: cis-gke-v1.5.0-restrict-env-var-secrets
  labels:
    policycontroller.gke.io/bundleName: cis-gke-v1.5.0
  annotations:
    policycontroller.gke.io/bundleVersion: "202405.0"
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'cis-gke-v1.5.0',
        bundleDisplayName: 'CIS GKE Benchmark v1.5.0',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-cis-gke-v1.5',
        bundleVersion: '202405.0',
        bundleDescription: 'Use the CIS GKE Benchmark 1.5.0 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against the CIS GKE Benchmark v1.5.0, which is a set of recommendations for configuring GKE to support a robust security posture.',
        controlNumbers: '[4.4.1]',
        severity: 'UNSPECIFIED',
        description: 'Restricts the use of secrets as environment variables in container definitions. Instead, use mounted secret files in data volumes.',
        remediation: 'Container definitions cannot use secrets as environment variables. Use a mounted secret file in a data volume. See "Using Secrets as files from a Pod" for more information https://kubernetes.io/docs/concepts/configuration/secret/#using-secrets-as-files-from-a-pod',
        minimumTemplateLibraryVersion: '1.10.2',
        constraintHash: '6853a2d8343cb0c596beec6472f3e9e4fc48aeb7ce9f403657e9c33097c4e199'
      }"
    internal.kpt.dev/upstream-identifier: 'constraints.gatekeeper.sh|K8sNoEnvVarSecrets|default|cis-gke-v1.5.0-restrict-env-var-secrets'
spec:
  enforcementAction: deny
  match:
    excludedNamespaces:
      - config-management-system
      - gke-connect
      - kube-system
      - apigee
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
