policies/cis-gke-v1.5.0/restrict-loadbalancer.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockLoadBalancer
metadata: # kpt-merge: /cis-gke-v1.5.0-restrict-loadbalancer
  name: cis-gke-v1.5.0-restrict-loadbalancer
  labels:
    policycontroller.gke.io/bundleName: cis-gke-v1.5.0
  annotations:
    policycontroller.gke.io/bundleVersion: "202405.0"
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'cis-gke-v1.5.0',
        bundleDisplayName: 'CIS GKE Benchmark v1.5.0',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-cis-gke-v1.5',
        bundleVersion: '202405.0',
        bundleDescription: 'Use the CIS GKE Benchmark 1.5.0 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against the CIS GKE Benchmark v1.5.0, which is a set of recommendations for configuring GKE to support a robust security posture.',
        controlNumbers: '[5.6.8]',
        severity: 'UNSPECIFIED',
        description: 'Disallows all Services with type LoadBalancer.',
        remediation: 'Services with the type LoadBalancer are disallowed. Use an alternative. See "Using Google-managed SSL certificates" for more information: https://cloud.google.com/kubernetes-engine/docs/how-to/managed-certs',
        minimumTemplateLibraryVersion: '1.14.0',
        constraintHash: '0a8c11f3372e190b3e048d48097a887f979de96287675e4fd68a48cfd170f0f1'
      }"
    internal.kpt.dev/upstream-identifier: 'constraints.gatekeeper.sh|K8sBlockLoadBalancer|default|cis-gke-v1.5.0-restrict-loadbalancer'
spec:
  enforcementAction: deny
  match:
    excludedNamespaces:
    - apigee
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Service
